kubernetes/test/app-test-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nasa-power-test-worker
  namespace: alozano0304
  labels:
    app: nasa-power-test-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nasa-power-test-worker
  template:
    metadata:
      labels:
        app: nasa-power-test-worker
    spec:
      containers:
        - name: nasa-power-test-worker
          image: alozano0304/nasa-power-worker:1.0
          imagePullPolicy: Always
          command: ["uv", "run", "worker.py"]
          env:
            - name: REDIS_HOST
              value: nasa-power-test-redis-service
            - name: REDIS_PORT
              value: "6379"
            - name: LOG_LEVEL
              value: DEBUG
