kubernetes/test/app-test-service-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nasa-power-test-fastapi-service
  namespace: alozano0304
spec:
  type: ClusterIP
  selector:
    app: nasa-power-test-fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
