kubernetes/test/app-test-service-nodeport-FastAPI.yml
---
kind: Service
apiVersion: v1
metadata:
  name: nasa-power-test-fastapi-nodeport-service
  namespace: alozano0304
spec:
  type: NodePort
  selector:
    app: nasa-power-test-fastapi
  ports:
    - port: 8000
      targetPort: 8000
